src/assets/networkpolicy/netpol-deny-all-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp-deny-all
  name: webapp-deny-all
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-deny-all
  template:
    metadata:
      labels:
        app: webapp-deny-all
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database-deny-all
  name: database-deny-all
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-deny-all
  template:
    metadata:
      labels:
        app: database-deny-all
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-deny-all
  name: kafka-deny-all
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-deny-all
  template:
    metadata:
      labels:
        app: kafka-deny-all
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp-deny-all
  name: webapp-deny-all
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp-deny-all
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database-deny-all
  name: database-deny-all
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: database-deny-all
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-deny-all
  name: kafka-deny-all
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kafka-deny-all
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-to-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-to-all
spec:
  podSelector: {}
  policyTypes:
    - Egress
