src/assets/networkpolicy/netpol-egress-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp-egress
  name: webapp-egress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-egress
  template:
    metadata:
      labels:
        app: webapp-egress
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database-egress
  name: database-egress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-egress
  template:
    metadata:
      labels:
        app: database-egress
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-egress
  name: kafka-egress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-egress
  template:
    metadata:
      labels:
        app: kafka-egress
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp-egress
  name: webapp-egress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp-egress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database-egress
  name: database-egress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: database-egress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-egress
  name: kafka-egress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kafka-egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-to-database
spec:
  podSelector:
    matchLabels:
      app: database-egress
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: webapp-egress
      ports:
        - protocol: TCP
          port: 80
