src/assets/networkpolicy/netpol-ingress-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp-ingress
  name: webapp-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-ingress
  template:
    metadata:
      labels:
        app: webapp-ingress
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: database-ingress
  name: database-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-ingress
  template:
    metadata:
      labels:
        app: database-ingress
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-ingress
  name: kafka-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ingress
  template:
    metadata:
      labels:
        app: kafka-ingress
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp-ingress
  name: webapp-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp-ingress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database-ingress
  name: database-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: database-ingress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-ingress
  name: kafka-ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kafka-ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-to-database
spec:
  podSelector:
    matchLabels:
      app: database-ingress
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: webapp-ingress
      ports:
        - protocol: TCP
          port: 80
